@@ -8,8 +8,9 @@ Bug fixes:
 ~~~~~~~~~~
 - cpsskins_cps3/cpsskins_getNavigationInfo.py: better traversal to obtain
   root proxy folders.
-- made cell block editing less modal: the layout of cell blocks can be edited
+- Made cell block editing less modal: the layout of cell blocks can be edited
   even if they are not selected.
+- Made the installer more robust on how to find CPSSkins .po files.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
